@@ -1,0 +1,23 @@
+low -> 0   : 0
+low -> 1   : 16
+low -> 2   : 50
+low -> 3   : 84
+low -> 4   : 118
+low -> 5   : 152
+low -> 6   : 186
+low -> 7   : 220
+low -> 8   : 254
+low: 000123456789abcdef
+...: 001032547698badcfe
+high -> 0   : 0
+high -> 1   : 1
+high -> 2   : 35
+high -> 3   : 69
+high -> 4   : 103
+high -> 5   : 137
+high -> 6   : 171
+high -> 7   : 205
+high -> 8   : 239
+high: 000123456789abcdef
+....: 001032547698badcfe
+Warning: can not pack '0001234567890ABCDEF' as hex string, number of characters must be even at line 38
